# pytest-pgtap

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup-python-hatch/: action.yml
.github/workflows/: release.yml  testing.yml
docs/source/: conf.py
pytest_pgtap/: __init__.py  pgtap.py  plugin.py
sql/: test_wrong_plan.sql
tests/: conftest.py  runtests_fixture.sql  test_marker.py  test_plugin.py  test_runtests.py
tests/sql/: runtests_fixture.sql
